--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -14,4 +14,4 @@ RUN chmod 777 mvnw
 
 RUN ./mvnw package
 
-CMD ["java", "-jar", "target/api_applimp-0.0.1-SNAPSHOT.jar"]
+CMD ["java", "-jar", "target/api_applimp-0.0.1-SNAPSHOT.war"]
