--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5433/applimp
-    username: postgres
-    password: 1234
+    url: jdbc:postgresql://dpg-d1655ljipnbc73fiqvs0-a.oregon-postgres.render.com:5432/applimp
+    username: applimp_user
+    password: YsnPsopBf57q1rfJvrFt5DLsyW0ve0nO
   jpa:
     hibernate:
       ddl-auto: update
